Fix .fade animation on iOS devices

--- a/src/web/app/styles/animations.less
+++ b/src/web/app/styles/animations.less
@@ -13,17 +13,7 @@
     .animation(fadeIn @speed);
   }
 
-  &.ng-enter-active {
-    opacity: 1.0;
-    pointer-events: none;
-  }
-
   &.ng-leave {
     .animation(fadeOut @speed);
-  }
-
-  &.ng-leave-active {
-    opacity: 0.0;
-    pointer-events: none;
   }
 }
