--- a/src/web/app/styles/main.less
+++ b/src/web/app/styles/main.less
@@ -29,6 +29,7 @@ ng-view.fade {
     padding: 8px 14px;
     border-radius: 6px;
     margin-top: 6px;
+    cursor: pointer;
   }
 }
 
